force-app/main/default/objects/Result_Category__c/fields/Percentage_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Obtained__c</fullName>
    <formula>( Right_Answered_Ques__c  /  Total_Questions__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Obtained</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>