force-app/main/default/objects/Result_Category__c/fields/Right_Answered_Ques__c.field-meta.xml
<CustomField>
    <fullName>Right_Answered_Ques__c</fullName>
    <label>Right Answered Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>