force-app/main/default/objects/Result_Category__c/fields/Student_Test_Association__c.field-meta.xml
<CustomField>
    <fullName>Student_Test_Association__c</fullName>
    <label>Student Test Association</label>
    <referenceTo>Student_Test_Association__c</referenceTo>
    <relationshipLabel>Result Categories</relationshipLabel>
    <relationshipName>Result_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>