force-app/main/default/objects/Result_Category__c/listViews/Result_Category.listView-meta.xml
<ListView>
    <fullName>Result_Category</fullName>
    <columns>NAME</columns>
    <columns>Student_Test_Association__c</columns>
    <columns>Total_Questions__c</columns>
    <columns>Right_Answered_Ques__c</columns>
    <columns>Percentage_Obtained__c</columns>
    <filterScope>Everything</filterScope>
    <label>Result Category</label>
</ListView>